change CSS for social menu icons to fix extra space between some icons

--- a/wp-content/themes/accelerate-theme-child/style.css
+++ b/wp-content/themes/accelerate-theme-child/style.css
@@ -359,9 +359,11 @@ ul.tweets {
 /* SOCIAL MEDIA MENU IN FOOTER */
 .social-media-navigation ul {
   margin: 0;
+  list-style-type: none;
 }
 .social-media-navigation ul li {
-  display: inline-block;
+  /* display: inline-block; */
+  float: left;
   background-color: #333;
   margin: 0px 3px;
   width: 40px;
